<resources>

    <string name="app_name">test</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="cover">Cover</string>
    <string name="btn_play">|&gt;</string>
    <string name="btn_pause">||</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="exit">Exit</string>
    
</resources>