<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/linearLayout1_1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >
	        <Button
	            android:id="@+id/btnBan"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="--Ban--"
	            android:onClick="banTrack" />
		</LinearLayout>
		
        <LinearLayout
            android:id="@+id/linearLayout1_2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:gravity="center" >
	        <Button
	            android:id="@+id/btnLike"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="--Like--"
	            android:onClick="likeTrack" />
	    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1_3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >
	        <Button
	            android:id="@+id/btnShare"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="--Share--"
	            android:onClick="shareTrack" />
	    </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_height="wrap_content"
	    android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center" >
	    <ImageView
	        android:id="@+id/imgvCover"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/cover"
	        android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >
	        <Button
	            android:id="@+id/btnPrevious"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="&lt;&lt;"
	            android:onClick="previousTrack" />
		</LinearLayout>
		
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:gravity="center" >
	        <Button
	            android:id="@+id/btnPlay"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/btn_play"
	            android:onClick="playPauseTrack" />
	    </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >
	        <Button
	            android:id="@+id/btnNext"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="&gt;&gt;"
	            android:onClick="nextTrack" />
	    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center" >
	    <SeekBar
	        android:id="@+id/seekTime"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center" >
	    <TextView
	        android:id="@+id/txtMsg"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:text="@string/hello_world"
	        tools:context=".MainActivity" />
    </LinearLayout>
    
</LinearLayout>
